[YRMT-44] Fixed outlook spacing main menu

--- a/docroot/style-guide-rmt/scss/components/_header.scss
+++ b/docroot/style-guide-rmt/scss/components/_header.scss
@@ -3,8 +3,8 @@
 .header {
   &-wrapper {
     margin: 0 auto;
-    max-width: 600px;
     min-width: 65%;
+    max-width: 600px;
     padding-bottom: 28px;
     padding-top: 33px;
     padding-left: 10px;
@@ -39,7 +39,10 @@
 
     .main-menu {
       vertical-align: bottom;
-      text-align: right;
+
+      td {
+        padding: 0 30px;
+      }
     }
   }
 
